Add python top level directory